
Changelog
=========

4.0.9 (unreleased)
------------------

- Add DossierMigrator that migrates dossier responsibles (to be used
  with ftw.usermigration).
  [lgraf]


4.0.8 (2015-01-29)
------------------

- XlsSource: Handle values that are already a valid term for vocabulary fields.
  [lgraf]

- XlsSource: Raise KeyError if a value can't be found in the translation mapping
  for fields with a vocabulary, instead of just setting the translated value anyway.
  [lgraf] 

- XlsSource: Add some more alternate spellings for archival_value mapping.
  [lgraf]

- Setup: Make sure to set `current_unit_id` registry setting
  even when `SQL` is not ticked.
  [lgraf]

- Setup: Make sure that an admin-unit is created before it is queried
  during `sync-ogds`.
  [deiferni]


4.0.7 (2015-01-06)
------------------

- OrgUnitSelector: Fix fallback logic:

  Build intersection of current admin units' org units and
  user's org units. If some of the user's org units are in the
  current admin unit, use the first of those as the fallback.

  Otherwise we're in an inter-admin unit operation, default to
  current admin unit's first org unit.
  [lgraf]

- CookieStorage: Extend max age of cookies to 30 days (was
  "end of browser session" before).
  [lgraf]

- OrgUnitSelector: Store selected OrgUnit after determining fallback.
  [lgraf]


4.0.6 (2014-12-09)
------------------

- Implement pessimistic connection invalidation (MySQL only):
  Check every connection that has been checked out from pool, and
  invalidate it if it's stale.
  [lgraf]

- Reworked OrgUnit Selector:
    - Store current unit to regular cookie instead of using the session_data_manager.
    - Differentiate between users_units (selectable) and admin_unit's org_unit
      (current org_unit).
    - Change current org_unit functionality, the current orgunit has to be
      part of the current admin_unit.

  [phgross]

- Made schemamigrations to 4.0.x release oracle compatible.
  [phgross]
