@@ -5,6 +5,10 @@ Changelog
 4.0.9 (unreleased)
 ------------------
 
+- Add OGDSMigrator that migrates users and inbox groups in OGDS SQL tables
+  (to be used with ftw.usermigration).
+  [lgraf]
+
 - Add DossierMigrator that migrates dossier responsibles (to be used
   with ftw.usermigration).
   [lgraf]
